--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', 'Arial', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-weight: 700;
+  font-size: 42px;
+  text-transform: uppercase;
+  padding-bottom: 10px;
 }
+
+h2 {
+  font-weight: 600;
+  font-size: 30px;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 25px;
+}
+
+h4 {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+h5 {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+h6 {
+  font-weight: 700;
+  font-size: 15px;
+}
+
+body {
+  height: 100%;
+}
+
+p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+}
+
+nav {
+  font-weight: 600;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+/* orange colour
+hsl(32, 100%, 49%) */
+
+/* purple colour
+hsl(200, 95%, 14%) */
+
+/* black colour
+hsl(0, 0%, 13%) */
