--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -33,7 +33,7 @@ fieldset {
 label {
     display: block;
     margin: 10px 0 5px;
-    color: white;
+    /*color: white;*/
     text-transform: uppercase;
     font-weight: 600;
     font-size: 14px;
