--- a/src/components/inputField/InputField.css
+++ b/src/components/inputField/InputField.css
@@ -1,6 +1,9 @@
-/*.input-item-label-white {*/
-/*    color: white;*/
-/*}*/
+.input-item-label-white {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+}
 
 /*.input-item-label-black {*/
 /*    color: hsl(0, 0%, 13%);*/
@@ -8,11 +11,18 @@
 
 .input-field {
     border-radius: 6px;
-    border: 2px solid darkgrey;
+    border: 1px solid #fff;
     width: 100%;
     padding: 8px 15px;
 }
 
 .input-item-container {
     width: 100%;
+    padding: 2% 2% 0;
+}
+
+@media all and (max-width: 960px) {
+    .input-item-container {
+        padding: 2% 2% 8%;
+    }
 }
