--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,28 +1,48 @@
 .about-container {
     display: flex;
-    /*flex-direction: row;*/
-    /*background-color: darkcyan;*/
-    margin: auto;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .bio-container {
-    padding: 3% 10%;
-    margin: 75px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 50%;
-    height: 100%;
-    /*background-color: chartreuse;*/
+    height: 100vh;
+    padding: 3% 10%;
 }
+
 
 .picture-container {
     width: 50%;
-    height: 100%;
-    margin: 0 auto;
-    /*background-color: blueviolet;*/
 }
 
 .picture {
+    height: 100vh;
     width: 100%;
-    height: 100%;
-    background: no-repeat center center fixed;
-    background-size: cover;
+}
+
+.bio__arrow {
+    cursor: pointer;
+    font-size: 25px;
+    color: 	hsl(0, 0%, 14%);
+}
+
+@media all and (max-width: 960px) {
+    .about-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bio-container {
+        width: 100%;
+        justify-content: center;
+        height: 50vh;
+    }
+
+    .picture-container {
+        width: 100%;
+    }
+
 }
