--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,30 +1,30 @@
-.background-img-dashboard {
-    height: 100%;
-    width: 100%;
-    /*position: relative;*/
-    z-index: -1;
-    background-image: url("../../assets/images/Oliver-Heldens-Tomorrowland-dark.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-bottom: 100px;
-}
+/*.background-img-dashboard {*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    !*position: relative;*!*/
+/*    z-index: -1;*/
+/*    background-image: url("../../assets/images/Oliver-Heldens-Tomorrowland-dark.jpg");*/
+/*    background-size: cover;*/
+/*    background-repeat: no-repeat;*/
+/*    padding-bottom: 100px;*/
+/*}*/
 
-.header-container {
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    padding: 40px 15% 20px 15%;
-}
+/*.header-container {*/
+/*    color: white;*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*    padding: 40px 15% 20px 15%;*/
+/*}*/
 
-.active-link {
-    border-bottom: 3px solid white;
-}
+/*.active-link {*/
+/*    border-bottom: 3px solid white;*/
+/*}*/
 
-h2 {
-    text-transform: uppercase;
-    font-weight: 700;
-}
+/*h2 {*/
+/*    text-transform: uppercase;*/
+/*    font-weight: 700;*/
+/*}*/
 
-h4 {
-    text-transform: uppercase;
-}
+/*h4 {*/
+/*    text-transform: uppercase;*/
+/*}*/
