--- a/src/pages/signUp/SignUp.css
+++ b/src/pages/signUp/SignUp.css
@@ -1,48 +1,48 @@
-.background-img-signUp {
-    height: 100%;
-    width: 100%;
-    /*position: relative;*/
-    z-index: -1;
-    background-image: url("../../assets/images/oliver_heldens_ultra-dark.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-bottom: 100px;
-}
+/*.background-img-signUp {*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    !*position: relative;*!*/
+/*    z-index: -1;*/
+/*    background-image: url("../../assets/images/oliver_heldens_ultra-dark.jpg");*/
+/*    background-size: cover;*/
+/*    background-repeat: no-repeat;*/
+/*    padding-bottom: 100px;*/
+/*}*/
 
-.btn-purple {
-    background-color: hsl(200, 95%, 14%);
-}
+/*.btn-purple {*/
+/*    background-color: hsl(200, 95%, 14%);*/
+/*}*/
 
-.container-logo-signUp{
-    display: flex;
-    padding-top: 5%;
-    align-content: center;
-    justify-content: center;
-}
+/*.container-logo-signUp{*/
+/*    display: flex;*/
+/*    padding-top: 5%;*/
+/*    align-content: center;*/
+/*    justify-content: center;*/
+/*}*/
 
-.logo-signUp {
-    width: 300px;
-}
+/*.logo-signUp {*/
+/*    width: 300px;*/
+/*}*/
 
-.form-container-signUp {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 5% 25%;
-    align-items: center;
-    padding: 5% 10%;
-    position: relative;
-}
+/*.form-container-signUp {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    background-color: white;*/
+/*    margin: 5% 25%;*/
+/*    align-items: center;*/
+/*    padding: 5% 10%;*/
+/*    position: relative;*/
+/*}*/
 
-.form-back-arrow {
-    position: absolute;
-    width: 30px;
-    left: 70px;
-    top: 80px;
-}
+/*.form-back-arrow {*/
+/*    position: absolute;*/
+/*    width: 30px;*/
+/*    left: 70px;*/
+/*    top: 80px;*/
+/*}*/
 
-.form-signUp {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
+/*.form-signUp {*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
