--- a/src/components/listItem/ListItem.css
+++ b/src/components/listItem/ListItem.css
@@ -1,3 +1,62 @@
 .list-item {
+    background-color: hsla(0, 0%, 14%, 0.8);
+    width: 45%;
+    height: 25%;
+    margin: 10px;
+    padding: 2%;
+    box-shadow: 0 0 15px -5px hsl(0, 0%, 14%);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s;
+    animation: ease-in-out;
+}
 
+.list-item:hover {
+    transform: scale(1.1);
+}
+
+.list-item__title {
+    font-weight: 700;
+    padding-bottom: 5px;
+}
+
+.list-item__subTitle {
+    font-size: 14px;
+    padding: 5px;
+}
+
+.list-item__body p {
+    font-size: 12px;
+    font-weight: 300;
+    padding: 15px 5%;
+    line-height: 15px;
+    color: #fff;
+    text-align: center;
+}
+
+.list-item__redirect {
+    padding: 5px;
+}
+
+.list-item__redirect button {
+    border: none;
+    background: none;
+    width: 100px;
+    height: 20px;
+}
+
+.list-item__redirect a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+@media all and (max-width: 960px) {
+    .list-item {
+        width: 95%;
+    }
 }
