--- a/src/pages/uploadList/UploadList.css
+++ b/src/pages/uploadList/UploadList.css
@@ -5,8 +5,7 @@
     background-size: cover;
     background-position: center;
     width: auto;
-    height: 100vh;
-    /*height veranderen naar 100%*/
+    height: 100%;
 }
 
 .header-container {
@@ -27,11 +26,19 @@
 }
 
 .upload-list__container {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     border: 4px solid #fff;
+    padding: 2% 2%;
+    margin: 0 25%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
-.upload-list__item {
-    background-color: hsl(0, 0%, 14%);
+@media all and (max-width: 960px) {
+    .upload-list__container {
+        display: flex;
+        flex-flow: column nowrap;
+    }
 }
