--- a/src/pages/feedback/Feedback.css
+++ b/src/pages/feedback/Feedback.css
@@ -1,4 +1,76 @@
 .background-img__feedback {
+    z-index: -1;
+    background-image: url("../../assets/images/Oliver-Heldens_credit_@alivecoverage-dark.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 100vh;
+}
+
+.feedback-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20% 20px;
+}
+
+.feedback-header__arrow {
+    align-self: flex-start;
+    cursor: pointer;
+    font-size: 30px;
+    color: #fff;
+}
+
+.feedback-header__h2 {
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
+}
+
+.feedback-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    /*height: 100%;*/
+    background: linear-gradient(to bottom, hsl(200, 95%, 14%), hsla(200, 95%, 14%, 0) 60%);
+    border: 4px solid hsl(200, 95%, 14%);
+    border-radius: 50px;
+    margin: 0 25% 5%;
+    padding: 25px 3%
+}
+
+.feedback-container form {
+    width: 400px;
+}
+
+.feedback-container input {
+    margin-bottom: 2%;
+}
+
+.feedback-container label {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.feedback-container textarea {
+    width: 96%;
+    margin: 0 -2% 0 2%;
+    border-radius: 6px;
+    padding: 8px 15px;
+    resize: none;
+}
+
+.feedback-container__buttons {
 
 }
 
+.feedback-container__form {
+    display: flex;
+    justify-content: center;
+    /*height: 100vh;*/
+}
