--- a/src/pages/signUp/SignUp.css
+++ b/src/pages/signUp/SignUp.css
@@ -1,48 +1,80 @@
-/*.background-img-signUp {*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    !*position: relative;*!*/
-/*    z-index: -1;*/
-/*    background-image: url("../../assets/images/oliver_heldens_ultra-dark.jpg");*/
-/*    background-size: cover;*/
-/*    background-repeat: no-repeat;*/
-/*    padding-bottom: 100px;*/
+.background-img__signUp {
+    z-index: -1;
+    background-image: url("../../assets/images/oliver_heldens_ultra-dark.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 100vh;
+}
+
+.container-logo__signUp {
+    display: flex;
+    padding-top: 5%;
+    align-content: center;
+    justify-content: center;
+}
+
+.logo-signUp {
+    width: 300px;
+}
+
+.form-container__signUp {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin: 5% 25%;
+    justify-content: center;
+    align-items: center;
+    padding: 5% 10%;
+    height: 65%;
+}
+
+.form-container__signUp h1 {
+    padding: 20px 0;
+}
+
+.form-container__signUp label {
+    color: hsl(0, 0%, 13%);
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 2% 2% 0;
+}
+
+.form-signUp {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-container__signUp p {
+    color: hsl(0, 0%, 33%);
+    font-weight: 400;
+    font-size: 12px;
+    margin: 20px 0;
+    text-align: center;
+}
+
+.signUp__arrow {
+    align-self: flex-start;
+    cursor: pointer;
+    font-size: 25px;
+    color: 	hsl(0, 0%, 14%);
+}
+
+/*.form-container__signUp a {*/
+/*    text-decoration: none;*/
+/*    font-weight: 600;*/
 /*}*/
 
-/*.btn-purple {*/
-/*    background-color: hsl(200, 95%, 14%);*/
-/*}*/
+@media all and (max-width: 960px) {
+    .form-container__signUp {
+        margin: 5% 20%;
+    }
 
-/*.container-logo-signUp{*/
-/*    display: flex;*/
-/*    padding-top: 5%;*/
-/*    align-content: center;*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.logo-signUp {*/
-/*    width: 300px;*/
-/*}*/
-
-/*.form-container-signUp {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    background-color: white;*/
-/*    margin: 5% 25%;*/
-/*    align-items: center;*/
-/*    padding: 5% 10%;*/
-/*    position: relative;*/
-/*}*/
-
-/*.form-back-arrow {*/
-/*    position: absolute;*/
-/*    width: 30px;*/
-/*    left: 70px;*/
-/*    top: 80px;*/
-/*}*/
-
-/*.form-signUp {*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*}*/
+    .form-container__signUp p {
+        font-size: 14px;
+    }
+}
