--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -118,10 +118,35 @@
     transition: all 0.2s ease-out;
 }
 
+.button-feedback {
+    width: 250px;
+    margin-top: 4%;
+    padding: 10px;
+    border: 2px solid #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 26px;
+}
+
+.button-feedback:hover {
+    background-color: lightgray;
+}
+
+.button-feedback:focus {
+    border: 2px solid hsl(32, 100%, 49%);
+    background-color: hsl(32, 100%, 49%);
+    color: #fff;
+}
+
 @media all and (max-width: 1200px) {
     .button-detailpage {
         width: 500px;
         justify-content: space-evenly;
+    }
+
+    .button-feedback {
+        width: 400px;
     }
 }
 
@@ -144,6 +169,10 @@
     .button-detailpage {
         width: 400px;
     }
+
+    .button-feedback {
+        width: 300px;
+    }
 }
 
 @media all and (max-width: 780px) {
@@ -159,6 +188,16 @@
 @media all and (max-width: 640px) {
     .button-detailpage {
         width: 250px;
+    }
+
+    .button-feedback {
+        width: 250px;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .button-feedback {
+        width: 200px;
     }
 }
 
