--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -61,7 +61,7 @@
         display: block;
         top: 75px;
         left: 0;
-        height: 100vh;
+        height: 100%;
         width: 100vw;
         background-color: hsl(200, 95%, 14%);
         padding: 20px;
