--- a/src/pages/feedback/Feedback.css
+++ b/src/pages/feedback/Feedback.css
@@ -5,7 +5,7 @@
     background-size: cover;
     background-position: center;
     width: auto;
-    height: 100vh;
+    height: 100%;
 }
 
 .feedback-header {
@@ -38,12 +38,13 @@
     background: linear-gradient(to bottom, hsl(200, 95%, 14%), hsla(200, 95%, 14%, 0) 60%);
     border: 4px solid hsl(200, 95%, 14%);
     border-radius: 50px;
-    margin: 0 25% 5%;
+    margin: 0 25%;
     padding: 25px 3%
 }
 
 .feedback-container form {
     width: 400px;
+    height: 100%
 }
 
 .feedback-container input {
@@ -66,11 +67,32 @@
 }
 
 .feedback-container__buttons {
-
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-bottom: 30px;
 }
 
 .feedback-container__form {
     display: flex;
     justify-content: center;
-    /*height: 100vh;*/
+    height: 100%;
+}
+
+@media all and (max-width: 960px) {
+    .feedback-container form {
+        width: 300px;
+    }
+}
+
+@media all and (max-width: 640px) {
+    .feedback-container form {
+        width: 250px;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .feedback-container form {
+        width: 200px;
+    }
 }
