--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,10 +1,81 @@
-.background-img-profile {
-    height: 100%;
-    width: 100%;
-    /*position: relative;*/
-    z-index: -1;
-    opacity: 58%;
-    background-image: url("../../assets/images/Oliver-Heldens_credit_@alivecoverage-1.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
+/*.background-img__profile {*/
+/*    z-index: -1;*/
+/*    background-image: url("../../assets/images/Oliver-Heldens_credit_@alivecoverage-light.jpg");*/
+/*    background-repeat: no-repeat;*/
+/*    background-size: cover;*/
+/*    background-position: center;*/
+/*    width: auto;*/
+/*    height: 100%;*/
+/*}*/
+
+/*.profile-header {*/
+/*    width: auto;*/
+/*    height: 50px;*/
+/*}*/
+
+/*.profile-container {*/
+/*    display: flex;*/
+/*    flex-flow: column nowrap;*/
+/*    background-color: #fff;*/
+/*    border-radius: 20px;*/
+/*    margin: 0 20%;*/
+/*    padding: 3% 8%;*/
+/*}*/
+
+/*.profile-arrow {*/
+
+/*}*/
+
+/*.profile__account-settings {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+/*.profile-settings__bar {*/
+/*    display: flex;*/
+/*    flex-flow: row wrap;*/
+/*}*/
+
+/*.profile__picture-settings {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+/*.profile-picture__bar {*/
+/*    display: flex;*/
+/*    flex-flow: row wrap;*/
+/*}*/
+
+/*.profile-picture__img {*/
+
+/*}*/
+
+/*.profile__info {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+/*.profile-info__bar {*/
+/*    display: flex;*/
+/*    flex-flow: row wrap;*/
+/*}*/
+
+/*.profile__change-password {*/
+
+/*}*/
+
+/*.profile__bio {*/
+
+/*}*/
+
+/*.profile__bio label {*/
+
+/*}*/
+
+/*.profile__bio textarea {*/
+
+/*}*/
+
+/*.profile__update-account {*/
+
+/*}*/
