--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -61,9 +61,10 @@
         display: block;
         top: 75px;
         left: 0;
-        height: 100%;
+        height: 50%;
         width: 100vw;
         background-color: hsl(200, 95%, 14%);
+        border-bottom: 5px solid #fff;
         padding: 20px;
         text-align: center;
         transform: translateX(-1500px);
