added dynamic uploadlist

--- a/src/pages/uploadList/UploadList.css
+++ b/src/pages/uploadList/UploadList.css
@@ -40,5 +40,6 @@
     .upload-list__container {
         display: flex;
         flex-flow: column nowrap;
+        justify-content: space-evenly;
     }
 }
