--- a/src/components/listItem/ListItem.css
+++ b/src/components/listItem/ListItem.css
@@ -36,6 +36,10 @@
     line-height: 15px;
     color: #fff;
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 150px;
 }
 
 .list-item__redirect {
