--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -26,7 +26,7 @@
 }
 
 .dashboard-list__container {
-    height: 100%;
+    height: 100vh;
     border: 4px solid #fff;
     padding: 2% 2%;
     margin: 0 25%;
