--- a/src/pages/uploadList/UploadList.css
+++ b/src/pages/uploadList/UploadList.css
@@ -26,7 +26,7 @@
 }
 
 .upload-list__container {
-    height: 100vh;
+    height: 100%;
     border: 4px solid #fff;
     padding: 2% 2%;
     margin: 0 25%;
